# fastlr

./: .Rbuildignore  .clang-format  .clangd  .gitattributes  .gitignore  DESCRIPTION  Justfile  NAMESPACE  README.md  README.qmd  meson.build  pyproject.toml
.github/workflows/: R-CMD-check.yaml  build-wheels.yml  uv-test-multiple.yml
R/: RcppExports.R  fastlr.R  generate_data.R
etc/: fastlr-environment-macos.yml  fastlr-environment.yml  requirements.txt
man/: fastlr.Rd  generate_data.Rd
output/: sessioninfo.txt  tables.md
r-tests/: test_fastlr.R
scripts/: benchmark.py  benchmarks.sh  build_wheel_window.sh  build_wheels.sh  compile_misc.sh  cpp_test.cpp  fastglm_bm.R  fastglm_bm_multiple.R  fastglm_check.R  fastglm_check.py  fastglm_data.R  fastlr_check.R  gen_testdata.py  generate-stubs.sh  ignore.R  install_windows.sh  plot_res.R  profile.py  repair_windows.sh  table.py
src/: Makevars  RcppExports.cpp  fastlr_rcpp.cpp
tests/: test_fastlr.py
